--- a/public/css/main.css
+++ b/public/css/main.css
@@ -23,3 +23,8 @@
 table.table > thead{
     border-bottom: 1px solid #282828 !important;
   }
+
+.modal-heading{
+    border-bottom: 1px solid #282828;
+    text-transform: uppercase;
+  }
