--- a/public/css/main.css
+++ b/public/css/main.css
@@ -62,3 +62,28 @@ div.card-datatable [class*="col-md-"] {
   padding-bottom: 4px !important;
   padding-left: 5px !important;
 }
+
+.print-header .m {
+  font-weight: bold;
+  font-size: 4.3vw;
+  border-bottom: 10px;
+  color: #000 !important;
+  margin-top: 10px;
+}
+
+.print-view, .print-view .table th{
+  font-size: 12px !important;
+}
+.print-view .table td{
+  font-size: 10px !important;
+}
+
+.print-header .s {
+  color: #000 !important;
+  font-weight: bold;
+  text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
+  font-size: 24px;
+}
+.font-18 {
+  font-size: 18px !important;
+}
