--- a/public/css/main.css
+++ b/public/css/main.css
@@ -64,25 +64,32 @@ div.card-datatable [class*="col-md-"] {
 }
 
 .print-header .m {
-  font-weight: bold;
-  font-size: 4.3vw;
+  font-weight: 500;
+  font-size: 4.2vw;
   border-bottom: 10px;
   color: #000 !important;
-  margin-top: 10px;
+  margin-top: 3px;
+  line-height: 1;
 }
 
+
+
 .print-view, .print-view .table th{
-  font-size: 12px !important;
+  font-size: 9px !important;
+  color: #666 !important;
+
 }
 .print-view .table td{
-  font-size: 10px !important;
+  font-size: 9px !important;
+  color: #666 !important;
 }
 
 .print-header .s {
   color: #000 !important;
-  font-weight: bold;
-  text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
+  font-weight: 500;
+  /* text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff; */
   font-size: 24px;
+  line-height: 1;
 }
 .font-18 {
   font-size: 18px !important;
