--- a/public/css/main.css
+++ b/public/css/main.css
@@ -75,12 +75,13 @@ div.card-datatable [class*="col-md-"] {
 
 
 .print-view, .print-view .table th{
-  font-size: 9px !important;
+  font-size: 10px !important;
+  padding: 0 1px !important;
   color: #666 !important;
 
 }
 .print-view .table td{
-  font-size: 9px !important;
+  font-size: 10px !important;
   color: #666 !important;
 }
 
